tests/miniJava/neg/006725_mutation.MiniJava
class java { public String void Main ( String [ ] java ) { { } } }
